@startuml ERDiagram
allowmixing
title Money Manager - ERD (Logical)

hide circle
skinparam linetype ortho

entity users {
  * user_id : INTEGER <<PK>>
  username : TEXT
}

entity transactions {
  * transaction_id : INTEGER <<PK>>
  user_id : INTEGER <<FK>>
}

entity budgets {
  * budget_id : INTEGER <<PK>>
  user_id : INTEGER <<FK>>
}

entity monthly_balance {
  * balance_id : INTEGER <<PK>>
  user_id : INTEGER <<FK>>
}

entity user_settings {
  * user_id : INTEGER <<PK,FK>>
}

entity notes {
  * note_id : INTEGER <<PK>>
  user_id : INTEGER <<FK>>
}

entity savings_goals {
  * goal_id : INTEGER <<PK>>
  user_id : INTEGER <<FK>>
}

entity goal_contributions {
  * contribution_id : INTEGER <<PK>>
  goal_id : INTEGER <<FK>>
}

users ||--o{ transactions
users ||--o{ budgets
users ||--o{ notes
users ||--o{ savings_goals
users ||--o{ monthly_balance
users ||--|| user_settings

savings_goals ||--o{ goal_contributions

@enduml

